Added a working unittest framework for services
